src/tests/test-src/errors/E66-inc-404.syntran
// E66: inc-404
// An #include file could not be found

let a = 1;

#include("does_not_exist_xyz.syntran");
